--- a/KGERP/Views/BillRequisition/CostCenterManagerMap.cshtml
+++ b/KGERP/Views/BillRequisition/CostCenterManagerMap.cshtml
@@ -20,9 +20,9 @@
         }
         else
         {
-    <span>
-        Project Manager Assign
-    </span>
+            <span>
+                Project Manager Assign
+            </span>
         }
     </h1>
     <ol class="breadcrumb">
@@ -40,7 +40,6 @@
             <div class="box">
                 @Html.AntiForgeryToken()
                 @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
                 @Html.HiddenFor(model => model.CostCenterManagerMapId, new { Value = "", id = "CostCenterManagerMapId" })
                 @Html.HiddenFor(model => model.ActionId, new { Value = "", id = "ActionId" })
                 @Html.HiddenFor(model => model.CompanyFK, new { id = "CompanyFK" })
@@ -50,7 +49,6 @@
                     </div>
                     <!-- /.box-header -->
                     <div class="box-body">
-
                         <div class="row">
                             <div class="col-md-4">
                                 <div class="form-group">
@@ -64,9 +62,8 @@
                                 <div class="form-group">
                                     <label asp-for="EmployeeRowId">Select Manager : </label>
                                     @Html.DropDownListFor(model => model.EmployeeRowId, new SelectList(Model.Employees.OrderBy(order => order.Name), "Id", "Name"), "== Select Manager ==", new { id = "selectEmployee", @class = "form-control" })
-
+                                    @Html.ValidationMessageFor(model => model.EmployeeRowId, "", new { @class = "text-danger" })
                                 </div>
-                                @Html.ValidationMessageFor(model => model.EmployeeRowId, "", new { @class = "text-danger" })
                             </div>
 
                             <div class="col-md-4">
@@ -79,23 +76,19 @@
                                     </div>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </section>
-
 }
 
 <section class="content" style="margin-top: -110px !important">
     <div class="row">
         <div class="box">
             <div class="box-danger">
-                <div class="box-header">
-                </div>
-                <!-- /.box-header -->
+                <div class="box-header"></div>
                 <div class="box-body">
                     <div class="table-responsive col-md-12">
                         <table id="KgErpDataTable" class="table table-striped">
@@ -104,30 +97,37 @@
                                     <th>SL</th>
                                     <th>Project Name</th>
                                     <th>Manager Name</th>
+                                    <th>Manager Id</th>
                                     <th>Action</th>
                                 </tr>
                             </thead>
-                            @{int sl = 0;}
                             <tbody>
-                                @foreach (var item in Model.CostCenterManagerMaps.OrderBy(order => order.CreateDate))
-                                {
-                                    <tr>
-                                        <td>
-                                            @(++sl)
-                                            <input type="hidden" id="costCenterId_@item.CostCenterManagerMapId" name="CostCenterId" value="@item.CostCenterId" />
-                                            <input type="hidden" id="costCenterManagerId_@item.CostCenterManagerMapId" name="CostCenterManagerId" value="@item.ManagerId" />
-                                        </td>
-                                        <td id="tdProjectName_@item.CostCenterManagerMapId">@Model.Projects.FirstOrDefault(c => c.CostCenterId == item.CostCenterId).Name</td>
-                                        <td id="tdEmployeeName_@item.CostCenterManagerMapId">@Model.Employees.FirstOrDefault(c => c.Id == item.ManagerId).Name</td>
-                                        <td>
-                                            <a id="@item.CostCenterManagerMapId" onclick="makeEditble(this);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
+                                @{
+                                    if (Model.CostCenterManagerMapModels != null)
+                                    {
+                                        int sl = 0;
+                                        foreach (var item in Model.CostCenterManagerMapModels.OrderBy(order => order.CreatedDate))
+                                        {
+                                            <tr>
+                                                <td>
+                                                    @(++sl)
+                                                    <input type="hidden" id="costCenterId_@item.CostCenterManagerMapId" name="CostCenterId" value="@item.ProjectId" />
+                                                    <input type="hidden" id="costCenterManagerId_@item.CostCenterManagerMapId" name="CostCenterManagerId" value="@item.EmployeeRowId" />
+                                                </td>
+                                                <td id="tdProjectName_@item.CostCenterManagerMapId">@Model.Projects.FirstOrDefault(c => c.CostCenterId == item.ProjectId).Name</td>
+                                                <td id="tdEmployeeName_@item.CostCenterManagerMapId">@Model.Employees.FirstOrDefault(c => c.Id == item.EmployeeRowId).Name</td>
+                                                <td id="tdEmployeeName_@item.CostCenterManagerMapId">@Model.Employees.FirstOrDefault(c => c.Id == item.EmployeeRowId).EmployeeId</td>
+                                                <td>
+                                                    <a id="@item.CostCenterManagerMapId" onclick="makeEditble(this);" class="linkPointer" title="Edit"><i class="fa fa-pencil-square-o"></i></a>
 
-                                            <a id="@item.CostCenterManagerMapId" onclick="makeDeletable(@item.CostCenterManagerMapId);" class="linkPointer" data-toggle="modal" data-target="#CostCenterManagerMapModal" title="Delete"
-                                               data-placement="top">
-                                                <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
-                                            </a>
-                                        </td>
-                                    </tr>
+                                                    <a id="@item.CostCenterManagerMapId" onclick="makeDeletable(@item.CostCenterManagerMapId);" class="linkPointer" data-toggle="modal" data-target="#CostCenterManagerMapModal" title="Delete"
+                                                       data-placement="top">
+                                                        <i class="glyphicon glyphicon-trash" aria-hidden="true"></i>
+                                                    </a>
+                                                </td>
+                                            </tr>
+                                        }
+                                    }
                                 }
                             </tbody>
                         </table>
@@ -173,7 +173,6 @@
 
 @section scripts {
     <script type="text/javascript">
-
         $(document).ready(function () {
             $('.formValidator').bootstrapValidator();
         });
@@ -187,7 +186,6 @@
                 $('#selectProject').val($('#costCenterId_' + rowId).val().trim()).trigger('change');
                 $('#selectEmployee').val($('#costCenterManagerId_' + rowId).val().trim()).trigger('change');
                 window.scrollTo({ top: 0, behavior: 'smooth' });
-                console.log($('#costCenterManagerId_' + rowId).val().trim())
             }
         }
 
@@ -202,7 +200,6 @@
         function resetForm() {
             $('#costCenterMapFormId')[0].reset();
             $('#btnSave').html("<i class='fa fa-edit'></i>&nbsp;Add");
-
         }
     </script>
 }
